Fix footer on small viewports

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -116,14 +116,18 @@ main {
     background-color: var(--bg-color);
     z-index: 2;
     position: relative;
-    margin-bottom: 5rem;
 }
 
-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+@media (min-width: 750px) {
+    main {
+        margin-bottom: 3rem;
+    }
+    footer {
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 }
 
 footer .wrapper {
